--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
               </table>
             </div>
             <div id="gils-container" class="col-6">
-              <h3>Gils</h3>
+              <h3>Girls</h3>
               <table class="table table-striped">
                 <tbody>
                   <tr *ngFor="let player of gils">
